tests/parser_cases/invalid/operator_not_missing_operand.ob0
(* INVALID: unary '~' operator is missing its operand *)
MODULE Main;
VAR flag: BOOLEAN;
BEGIN
  flag := ~
END Main.
